--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:emidiomatheus/letmeask-web-app.git",
+  "license": "MIT"
 }
